Validate Java 17 as a second supported target JDK for cert-agent (#140)
* Validate Java 17 as a second supported target JDK for cert-agent

Spiked whether the JCA/non-FIPS instrumentation needed any changes for
JDK 17: attached the existing, unmodified Java-11-built cert-agent.jar
+ libcert_agent_stub.so to a JDK 17 target JVM via jattach and confirmed
end-to-end via a real Tetragon-captured, correctly-parsed Kafka event.
No code changes needed -- COMPUTE_MAXS never touches the module-system
codepath COMPUTE_FRAMES would have hit, the classloader-split trick
relies on JVM 9+ semantics unrelated to JPMS, and JDK 17 doesn't have
the dynamic-attach restriction that starts at JDK 21. Docs updated to
record the validation and give side-by-side JDK 11/17 run instructions.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>

* Validate Java 21 as a third supported target JDK for cert-agent

Same spike as the Java 17 validation, this time via the live
cert-agent-deployer service's own auto-attach rather than manual
jattach: the existing, unmodified Java-11-built cert-agent.jar +
libcert_agent_stub.so retransforms KeyStore and captures a real
Tetragon/Kafka event on JDK 21 with no code changes.

The one real difference: JDK 21 prints a "Dynamic loading of agents
will be disallowed by default in a future release" warning on attach,
but attach still succeeds -- cosmetic today, not a blocker. Documented
this explicitly so it isn't mistaken for a failure, and noted it as
the one concrete forward-looking risk (a future JDK flipping that
default) worth re-checking later.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>

* Note verified Java versions in README comparison table

Java 11, 17, and 21 target JVMs are now validated end-to-end for the
JCA/non-FIPS instrumentation path -- worth surfacing in the
CertSight-differs table rather than leaving the claim unqualified.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>

* Validate Java 25 as a fourth supported t