@@ -140,6 +140,14 @@ ASM is the lower-level choice and is appropriate here because the target (`java.
 **Why does the transformer call `inst.retransformClasses(KeyStore.class)`?**
 When the agent is injected dynamically via `jattach`, `KeyStore` is already loaded. Without retransformation the instrumentation only applies to classes loaded after the agent attaches. Calling `retransformClasses` forces the JVM to re-run the transformer against the already-loaded `KeyStore` bytecode so the hook is active immediately, not just for future class loads.
 
+**What broke on JDK 25, if `COMPUTE_MAXS` already sidesteps the JPMS issue?** A completely different failure, caught by testing rather than assumed away: ASM 9.7 (the version bundled at the time) throws `IllegalArgumentException: Unsupported class file major version 69` when it tries to *parse* `KeyStore`'s own bytecode on a JDK 25 target — major version 69 is Java 25's classfile format, and ASM 9.7's `ClassReader` only recognized versions through Java 22 (major 66). This is an ASM library ceiling, unrelated to `COMPUTE_MAXS`/JPMS or the classloader split. The dangerous part: `ClassFileTransformer.transform()` throwing is swallowed by the JVM per the `java.lang.instrument` spec (the original, unmodified bytecode is kept for that class, and `retransformClasses()` itself doesn't throw) — so `[cert-agent] Initialized` printed anyway, with **no working hook**, and no `uprobe://java_cert_agent_write` event ever fired. Only visible via a `[cert-agent] Transformation failed for java/security/KeyStore: ...` line the transformer itself logs, or by checking for a real Kafka event rather than trusting the initialization log line. Fixed by bumping to ASM 9.10.1 (confirmed to parse major version 69 correctly) in `probe_tests/java/cert-agent/build.sh`.
+
+**Does the JPMS-avoidance argument (`COMPUTE_MAXS`) still hold on JDK 17, 21, and 25?** Yes on all three, once the ASM ceiling above is separately accounted for — validated end-to-end with the same JDK-11-built agent JAR attached to JDK 17, 21, and 25 target JVMs: `retransformClasses(KeyStore.class)` succeeded and events flowed through to `cert_analyzer` with no source changes to `CertTransformer.java` itself. `COMPUTE_MAXS`'s whole point is avoiding `getCommonSuperClass`/`Class.forName` entirely, so it's never actually exposed to any of these JDKs' stricter module defaults — that fix generalizes for free. The ASM *library version* is the separate, real constraint that needed bumping for JDK 25.
+
+**What about JDK 8 — does the JPMS argument even apply?** No, and that's the point: Java 8 predates the module system entirely (JPMS shipped in Java 9), so there's no `getCommonSuperClass`/module-boundary failure mode to avoid in the first place on an 8 target. The real constraint for JDK 8 turned out to be unrelated to JPMS or ASM — see "What broke on JDK 8" below.
+
+**What broke on JDK 8, and why is it a different failure shape from JDK 25's?** The reverse problem from JDK 25's. JDK 25's issue was ASM (a library *the agent bundles*) failing to parse the *target's* bytecode. JDK 8's issue is that the agent's *own* classes couldn't be loaded at all: the agent JAR was built at `--release 11` (classfile major version 55), and classfile compatibility is one-directional — a JVM can load its own version and older, never newer. A stock JDK 8 target JVM refused to even load `com/security/certagent/CertAgent`: `UnsupportedClassVersionError: ... class file version 55.0, this version of the Java Runtime only recognizes class file versions up to 52.0`, thrown out of `sun.instrument.InstrumentationImpl.loadClassAndCallAgentmain` — agent load fails loudly with a non-zero `jattach` response, unlike JDK 25's silent partial failure. Confirmed the agent source has no post-Java-8 API dependency (compiles clean at `--release 8`) and bundled ASM 9.10.1's own classes are classfile version 49 (Java 5) — so lowering the build target from 11 to 8 in `build.sh` fixed it with no source changes, and the resulting JAR still validates unmodified on 11/17/21/25.
+
 ---
 
 ### Classloader Split
@@ -149,6 +157,8 @@ When the agent is injected dynamically via `jattach`, `KeyStore` is already load
 
 **Why can't `NativeBridge.loadLibrary()` be called from `CertAgent.setup()`?**
 The JVM only allows a native library to be associated with one classloader. If `CertAgent.setup()` (running in the agent classloader) calls `System.load(libPath)`, then when the bootstrap classloader later initialises `NativeBridge` (triggered by the first `setCertificateEntry` call), its attempt to load the same library fails with "already loaded in another classloader" — leaving `loaded = false` in the bootstrap copy. The fix is to not load the library in the agent classloader at all. Instead, `CertAgent.setup()` writes the path into the system property `com.security.certagent.lib`, and `NativeBridge`'s static initialiser (which runs in the bootstrap context) reads the property and calls `System.load` — so the library is owned exclusively by the bootstrap classloader.
+
+**Is this trick JDK-version-specific?** No — `appendToBootstrapClassLoaderSearch` and classloader/native-library association semantics predate this project's whole supported range, back to Java 8. Confirmed by direct testing: the classloader split worked without any `UnsatisfiedLinkError` on Java 8, 17, 21, and 25 target JVMs alike (Java 8's own build required lowering the agent's build target to `--release 8` for an unrelated reason — see the ASM/bytecode-instrumentation section above — but the classloader split logic itself is unmodified).
 
 ---
 
@@ -198,7 +208,7 @@ jattach <pid> load instrument false /opt/cert-agent/cert-agent.jar=/opt/cert-age
 **When does static injection apply and how do you use it?**
 Static injection is required when:
 - The JVM was started with `-XX:+DisableAttachMechanism`, which prevents any runtime attach
-- Java 21+ with `-XX:-EnableDynamicAgentLoading` (the default on JDK 21 is a warning; future versions may enforce it)
+- A JVM explicitly started with `-XX:-EnableDynamicAgentLoading` (not yet the default on JDK 21 — see below; a future JDK release may flip the default and make this bullet apply out of the box)
 - The JVM process owner cannot be matched by the deployer (e.g. a heavily sandboxed container)
 - Short-lived JVM processes that may not survive the 30-second scan window
 
@@ -210,6 +220,23 @@ java -javaagent:/opt/cert-agent/cert-agent.jar=/opt/cert-agent/libcert_agent_stu
 ```
 
 The `premain` entry point runs before `main`, so `KeyStore` is instrumented before any application code executes — there is no coverage gap.
+
+**What actually happens on a stock JDK 21 target, given `-XX:-EnableDynamicAgentLoading` is mentioned above?** Confirmed by direct testing (attaching via the real `cert-agent-deployer` service, not just manual `jattach`): dynamic attach *still succeeds* on a default JDK 21 install. The target JVM prints a warning to its own stdout/stderr —
+```
+WARNING: A Java agent has been loaded dynamically (/opt/cert-agent/cert-agent.jar)
+WARNING: If a serviceability tool is not in use, please run with -Djdk.instrument.traceUsage for more information
+WARNING: Dynamic loading of agents will be disallowed by default in a future release
+```
+— but `retransformClasses`, the classloader split, and the full Tetragon/Kafka event chain all worked identically to Java 8, 11, and 17 (none of which print this warning), no code or deployment changes needed. This warning is cosmetic today; it becomes an actual blocker only if a JVM is explicitly started with `-XX:-EnableDynamicAgentLoading`, or once a future JDK release flips the *default* to disallow (the warning text itself says this is coming) — at that point the static-injection fallback below becomes the only option for that JVM.
+
+**JDK 25 adds a second, separate warning on top of the one above** — the JNI native-access restriction (part of the JEP 472-era phase-out of unrestricted native access), triggered by `NativeBridge`'s `System.load` call:
+```
+WARNING: A restricted method in java.lang.System has been called
+WARNING: java.lang.System::load has been called by com.security.certagent.NativeBridge in an unnamed module
+WARNING: Use --enable-native-access=ALL-UNNAMED to avoid a warning for callers in this module
+WARNING: Restricted methods will be blocked in a future release unless native access is enabled
+```
+Also just a warning today — confirmed `System.load` still succeeds and the full event chain still fires. Same shape of risk as the JDK 21 dynamic-agent-loading warning: harmless now, but a future JDK enforcing `--enable-native-access` by default would need that flag added to the target JVM's startup command (an operator-side change, not something the deployer or agent can add after the fact for an already-running JVM it doesn't control the launch command of).
 
 **How does the deployer surface the static flag when dynamic attach fails?**
 When `jattach` returns a non-zero exit code, the deployer reads `/proc/<pid>/cmdline` to reconstruct the original command line and logs:
